# libs-webservices

./: ChangeLog  GNUmakefile  GNUstep.h  GWSBinding.h  GWSBinding.m  GWSCoder.h  GWSCoder.m  GWSConstants.h  GWSDocument.h  GWSDocument.m  GWSElement.h  GWSElement.m  GWSExtensibility.h  GWSExtensibility.m  GWSHash.h  GWSHash.m  GWSJSONCoder.m  GWSMessage.h  GWSMessage.m  GWSPort.h  GWSPort.m  GWSPortType.h  GWSPortType.m  GWSPrivate.h  GWSSOAPCoder.m  GWSService.h  GWSService.m  GWSXMLRPCCoder.m  README  TODO  WSSUsernameToken.h  WSSUsernameToken.m  WebServices.gsdoc  WebServices.h  WebServices.m  WebServices_Prefix.pch  config.h.in  config.make.in  configure  configure.ac  (+3 more)
English.lproj/: InfoPlist.strings
Examples/: GNUmakefile  client.m  server.key  server.m
WebServices.xcode/: project.pbxproj
WebServices.xcodeproj/: project.pbxproj
iOSWebServices/: iOSWebServices-Prefix.pch  iOSWebServices.h  iOSWebServices.m
tests/: pl1  pl2  pl3  test  xml3  xml4
trunk/: ChangeLog  GNUmakefile  GWSBinding.h  GWSCoder.h  GWSElement.h  GWSElement.m  GWSJSONCoder.m  GWSMessage.m  GWSSOAPCoder.m  GWSService.m  Info.plist  WSSUsernameToken.h  WSSUsernameToken.m  WebServices.m  testGWSJSONCoder.m  testGWSSOAPCoder.m  testWebServices.m
trunk/Examples/: README  server.crt
trunk/WebServices.xcode/: project.pbxproj
trunk/tests/: jpl1  json1  pl2  pl3  pl4  test  test4.wsdl  xml1  xml2  xml4
